Fixed dashed border overlap

--- a/sites/ndsbs.com/themes/custom/bootstrap_ndsbs/css/bootstrap-ndsbs.css
+++ b/sites/ndsbs.com/themes/custom/bootstrap_ndsbs/css/bootstrap-ndsbs.css
@@ -2464,11 +2464,9 @@ p.dashed {
   line-height: 0.9;
   margin: 10px 0;
 }
-.dashed .col-md-4,
-.dashed .col-md-8 {
+.assessment-divider {
   border-top: 1px dashed #8b857d;
-  margin-left: 15px;
-  padding: 20px 0 0;
+  margin-top: 0;
 }
 .disabled-link {
   cursor: not-allowed;
@@ -2480,12 +2478,6 @@ p.dashed {
   .node-type-assessment .purchase-wrapper {
     float: none;
     margin: 0 auto;
-  }
-}
-@media (min-width: 992px) {
-  .dashed .col-md-4,
-  .dashed .col-md-8 {
-    margin-right: -45px;
   }
 }
 .sr-only-bs {
